--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Hello</h1>
+    <header>
+      <div class="wrapper">
+        <img src="/assets/logo.svg" alt="logo" />
+        <nav>
+          <ul>
+            <li class="download">
+              <img src="/assets/download.svg" alt="alt" />
+              <span>Download App</span>
+            </li>
+            <li><a href="#">travel planner</a></li>
+            <li><a href="#">register accomodation</a></li>
+            <li><a href="#">Help</a></li>
+            <li><a href="#">My Travels</a></li>
+            <li><a href="#">Register</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main>
+      <section id="section-01">
+        <div class="wrapper">
+          <h1>Everything is fine, you book with FeWo-direkt</h1>
+          <div class="outer-container">
+            <div class="input-container">
+              <img src="/assets/location.svg" alt="location" />
+              <input type="text" />
+            </div>
+            <div class="input-container">
+              <img src="/assets/location.svg" alt="location" />
+              <input type="text" />
+            </div>
+            <div class="input-container">
+              <img src="/assets/location.svg" alt="location" />
+              <input type="text" />
+            </div>
+            <button>Seek</button>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
