--- a/index.html
+++ b/index.html
@@ -32,17 +32,42 @@
           <div class="outer-container">
             <div class="input-container">
               <img src="/assets/location.svg" alt="location" />
-              <input type="text" />
+              <input type="text" placeholder="Where should we go?" />
             </div>
             <div class="input-container">
-              <img src="/assets/location.svg" alt="location" />
-              <input type="text" />
+              <img src="/assets/calendar.svg" alt="calendar" />
+              <input type="date" />
             </div>
             <div class="input-container">
-              <img src="/assets/location.svg" alt="location" />
-              <input type="text" />
+              <img src="/assets/guest.svg" alt="guest" />
+              <input type="text" placeholder="Guests" />
             </div>
             <button>Seek</button>
+          </div>
+        </div>
+      </section>
+      <section id="section-02">
+        <div class="wrapper">
+          <div class="register">
+            <div class="register-container">
+              <div class="register-icon">
+                <img src="/assets/location.svg" alt="location" />
+              </div>
+              <p>
+                Sign in to message the host and get more details about a
+                listing.
+              </p>
+            </div>
+            <p>Register</p>
+          </div>
+          <div>
+            <h3>Find accommodations to suit your taste</h3>
+            <div class="accommodations">
+              <div class="accommodation">
+                <div></div>
+                <p>holiday home</p>
+              </div>
+            </div>
           </div>
         </div>
       </section>
