--- a/index.html
+++ b/index.html
@@ -60,17 +60,51 @@
             </div>
             <p>Register</p>
           </div>
-          <div>
+          <div class="accommodations-container">
             <h3>Find accommodations to suit your taste</h3>
             <div class="accommodations">
               <div class="accommodation">
-                <div></div>
                 <p>holiday home</p>
+              </div>
+              <div class="accommodation">
+                <p>holiday home</p>
+              </div>
+              <div class="accommodation">
+                <p>holiday home</p>
+              </div>
+              <div class="accommodation">
+                <p>holiday home</p>
+              </div>
+              <div class="accommodation">
+                <p>holiday home</p>
+              </div>
+              <div class="accommodation">
+                <p>holiday home</p>
+              </div>
+              <div class="accommodation">
+                <p>holiday home</p>
+              </div>
+              <div class="accommodation">
+                <p>holiday home</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <h3>Browse weekend trips</h3>
+            <p>Offers for the period: 13 Dec. – 15 Dec.</p>
+            <div class="accommodations">
+              <div>
+                <img src="" alt="" />
+                <div>
+                  <span></span>
+                  <span></span>
+                </div>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <section id="section-03"></section>
     </main>
   </body>
 </html>
