--- a/index.html
+++ b/index.html
@@ -91,13 +91,96 @@
           </div>
           <div>
             <h3>Browse weekend trips</h3>
-            <p>Offers for the period: 13 Dec. – 15 Dec.</p>
+            <p class="price">Offers for the period: 13 Dec. – 15 Dec.</p>
             <div class="accommodations">
-              <div>
-                <img src="" alt="" />
-                <div>
-                  <span></span>
-                  <span></span>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
                 </div>
               </div>
             </div>
