--- a/index.html
+++ b/index.html
@@ -176,8 +176,119 @@
                     <span>Unusual(109 reviews)</span>
                   </div>
                   <h4>Detached holiday home in the Eifel</h4>
+                  <p class="price">Dahlem, North Rhine-Westphalia</p>
+                  <p>216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+            </div>
+            <div class="pictures">
+              <div class="picture">
+                <img src="/assets/garden.jpeg" alt="" />
+                <p>SUNNY ACCOMMODATIONS BY THE WATER</p>
+                <p>Enjoy sunny days by the water with your clique</p>
+              </div>
+              <div class="picture">
+                <img src="/assets/garden.jpeg" alt="" />
+                <p>SUNNY ACCOMMODATIONS BY THE WATER</p>
+                <p>Enjoy sunny days by the water with your clique</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <h3>
+              Find your holiday accommodation with pool in a sunny holiday
+              destination
+            </h3>
+            <p class="price">Offers for the period: 13 Dec. – 15 Dec.</p>
+            <div class="accommodations">
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
                   <p>Dahlem, North Rhine-Westphalia</p>
                   <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p>Dahlem, North Rhine-Westphalia</p>
+                  <p class="price">216 €</p>
+                  <p>for 2 nights</p>
+                  <p>108 € per night</p>
+                  <p>incl. taxes & fees</p>
+                </div>
+              </div>
+              <div class="trip">
+                <img src="/assets/garden.jpeg" alt="garden" />
+                <div class="acc">
+                  <div>
+                    <span class="green">10.0</span>
+                    <span>Unusual(109 reviews)</span>
+                  </div>
+                  <h4>Detached holiday home in the Eifel</h4>
+                  <p class="price">Dahlem, North Rhine-Westphalia</p>
+                  <p>216 €</p>
                   <p>for 2 nights</p>
                   <p>108 € per night</p>
                   <p>incl. taxes & fees</p>
@@ -187,7 +298,38 @@
           </div>
         </div>
       </section>
-      <section id="section-03"></section>
+      <section id="section-03">
+        <div class="wrapper">
+          <h3>Get inspiration for your family trip</h3>
+          <div class="grid">
+            <div class="picture box-1">
+              <img src="/assets/garden.jpeg" alt="" />
+              <p>SUNNY ACCOMMODATIONS BY THE WATER</p>
+              <p>Enjoy sunny days by the water with your clique</p>
+            </div>
+            <div class="picture box-2">
+              <img src="/assets/garden.jpeg" alt="" />
+              <p>SUNNY ACCOMMODATIONS BY THE WATER</p>
+              <p>Enjoy sunny days by the water with your clique</p>
+            </div>
+            <div class="picture other">
+              <img src="/assets/garden.jpeg" alt="" />
+              <p>SUNNY ACCOMMODATIONS BY THE WATER</p>
+              <p>Enjoy sunny days by the water with your clique</p>
+            </div>
+            <div class="picture other">
+              <img src="/assets/garden.jpeg" alt="" />
+              <p>SUNNY ACCOMMODATIONS BY THE WATER</p>
+              <p>Enjoy sunny days by the water with your clique</p>
+            </div>
+            <div class="picture other">
+              <img src="/assets/garden.jpeg" alt="" />
+              <p>SUNNY ACCOMMODATIONS BY THE WATER</p>
+              <p>Enjoy sunny days by the water with your clique</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
